--- a/static/main.css
+++ b/static/main.css
@@ -32,7 +32,7 @@ h3 {
 }
 nav ul {
   padding: 10px;
-  margin: 0;
+  padding-right: 0;
 }
 nav li {
   list-style: none;
@@ -42,9 +42,6 @@ nav a {
   text-decoration: none;
 }
 nav a:hover {
-  text-decoration: underline;
-}
-nav .active a {
   text-decoration: underline;
 }
 header {
@@ -110,7 +107,7 @@ header nav li.active a {
   top: 40px;
   right: auto;
   width: 330px;
-  padding: 30px;
+  padding: 0 20px;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -128,6 +125,9 @@ header nav li.active a {
 .main:focus {
   outline: none;
 }
+nav li.active a {
+  text-decoration: underline;
+}
 .content {
   margin-top: 27px;
   margin-left: auto;
@@ -141,11 +141,10 @@ header nav li.active a {
   font-size: 1.5em;
 }
 .content > .declarations {
-  white-space: nowrap;
-  overflow-x: auto;
   list-style: none;
   padding: 0;
   color: #646464;
+  line-height: .6;
 }
 .has-sidebar .main {
   left: 330px;
@@ -164,10 +163,10 @@ header nav li.active a {
   line-height: 1.3;
 }
 code {
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   background-color: #f7f7f7;
-  padding: 0 3px;
+  padding: 2px;
   border-radius: 2px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .output,
 .code {
@@ -242,34 +241,21 @@ code {
   .has-sidebar .sidebar h3 {
     margin: 0;
     font-weight: bold;
-    padding: 0;
+    padding: 9px 0;
     padding-left: 20px;
-  }
-  .has-sidebar .sidebar h3:hover {
-    background-color: #1d1d1d;
-  }
-  .has-sidebar .sidebar h3.active {
-    background-color: #292929;
   }
   .has-sidebar .sidebar a {
     display: block;
     color: white;
     padding: 9px 0;
+    padding-left: 35px;
   }
   .has-sidebar .sidebar a:hover {
     text-decoration: none;
   }
-  .has-sidebar .sidebar .active a {
-    text-decoration: none;
-  }
-  .has-sidebar .sidebar li a {
-    padding-left: 35px;
-  }
-  .has-sidebar .sidebar li:hover {
-    background-color: #1d1d1d;
-  }
-  .has-sidebar .sidebar li.active {
+  .has-sidebar .sidebar li.active a {
     background-color: #292929;
+    text-decoration: none;
   }
   .has-sidebar .sidebar ul {
     margin: 0;
